--- a/main.html
+++ b/main.html
@@ -5,60 +5,51 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Team</title>
+    <title>My Web Team</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Montserrat+Subrayada:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
+    
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid jumbotron" id="header">
         <div class="row">
-            <div class="col-12 jumbotron mb-3 team-heading">
+            <div class="col-12  mb-3 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
+    <div id="backImg">
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">dfg</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: dfg</li>
-            <li class="list-group-item">Email: <a href="mailto:dfg">dfg</a></li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
             <li class="list-group-item">Office number: undefined</li>
         </ul>
     </div>
 </div>
 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">dfg</h2>
+        <h2 class="card-title"></h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: dfg</li>
-            <li class="list-group-item">Email: <a href="mailto:dfg">dfg</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/dfg" target="_blank" rel="noopener noreferrer">dfg</a></li>
-        </ul>
-    </div>
-</div>
-<div class="card employee-card">
-    <div class="card-header">
-        <h2 class="card-title">sdfs</h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: sdf</li>
-            <li class="list-group-item">Email: <a href="mailto:sdf">sdf</a></li>
-            <li class="list-group-item">School: hgj</li>
+            <li class="list-group-item">ID: </li>
+            <li class="list-group-item">Email: <a href="mailto:"></a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
         </ul>
     </div>
 </div>
@@ -66,6 +57,7 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
