--- a/output/team.html
+++ b/output/team.html
@@ -29,98 +29,65 @@
     background-size: 100%">
     <div class="container">
         <div class="row">
-            <div class="team-area col-12 d-flex" style="flex-flow: wrap; justify-content: space-around;">
-                <div class="col-md-4"style="flex-direction: column; justify-items: left; justify-content: space-around;">
+            <div class="team-area col-12 d-flex" style="flex-flow: wrap;">
+                <div class="col-md-4"style="flex-wrap: wrap;">
 <div class="card employee-card" >
     <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
-        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif; ">sdlkjf</h2>
+        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif; ">ujkh</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sdlkjf</li>
-            <li class="list-group-item">Email: <a href="mailto:sdlkfj">sdlkfj</a></li>
+            <li class="list-group-item">ID: 6</li>
+            <li class="list-group-item">Email: <a href="mailto:jhjn">jhjn</a></li>
             <li class="list-group-item">Office number: undefined</li>
         </ul>
     </div>
 </div>
 </div>
-,<div class="col-md-4"style="flex-direction: column; justify-items: left; justify-content: space-around;">
-<div class="card employee-card" >
-    <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
-    color: rgb(10, 55, 92)">
-        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif; "></h2>
-        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: </li>
-            <li class="list-group-item">Email: <a href="mailto:"></a></li>
-            <li class="list-group-item">Office number: undefined</li>
-        </ul>
-    </div>
-</div>
-</div>
-<div class="col-md-4" style="flex-direction: column; justify-items: center; justify-content: space-around;">
+<div class="col-md-4" style="flex-wrap: wrap;">
 <div class="card employee-card" >
     <div class="card-header"style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
-        <h2 class="card-title">lsdjkfl</h2>
+        <h2 class="card-title">kuhuk</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sldkfj</li>
-            <li class="list-group-item">Email: <a href="mailto:lsdkfj">lsdkfj</a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/lsdkjf" target="_blank" rel="noopener noreferrer">lsdkjf</a></li>
+            <li class="list-group-item">ID: 87</li>
+            <li class="list-group-item">Email: <a href="mailto:jnhbn">jnhbn</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/jh" target="_blank" rel="noopener noreferrer">jh</a></li>
         </ul>
     </div>
 </div>
-</div>,<div class="col-md-4" style="flex-direction: column; justify-items: center; justify-content: space-around;">
+</div>,<div class="col-md-4" style="flex-wrap: wrap;">
 <div class="card employee-card" >
     <div class="card-header"style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
-        <h2 class="card-title"></h2>
+        <h2 class="card-title">kuh</h2>
         <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: </li>
-            <li class="list-group-item">Email: <a href="mailto:"></a></li>
-            <li class="list-group-item">GitHub: <a href="https://github.com/" target="_blank" rel="noopener noreferrer"></a></li>
+            <li class="list-group-item">ID: 87</li>
+            <li class="list-group-item">Email: <a href="mailto:jknhjk">jknhjk</a></li>
+            <li class="list-group-item">GitHub: <a href="https://github.com/kjhnjk" target="_blank" rel="noopener noreferrer">kjhnjk</a></li>
         </ul>
     </div>
 </div>
-</div><div class="col-md-4" style="flex-direction: column; justify-items: right; justify-content: space-around;">
+</div><div class="col-md-4" style="flex-wrap: wrap;">
 <div class="card employee-card" >
     <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
     color: rgb(10, 55, 92)">
-        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif" >l;sdkf</h2>
+        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif" >kjhn</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sd;lfk</li>
-            <li class="list-group-item">Email: <a href="mailto:sdfklm">sdfklm</a></li>
-            <li class="list-group-item">School: </li>
-        </ul>
-    </div>
-</div>
-<div class="row">
-</div>
-</div>,<div class="col-md-4" style="flex-direction: column; justify-items: right; justify-content: space-around;">
-<div class="card employee-card" >
-    <div class="card-header" style="font-family:'Montserrat Subrayada', sans-serif; background-color: rgb(23, 149, 180);
-    color: rgb(10, 55, 92)">
-        <h2 class="card-title" style="font-family:'Montserrat Subrayada', sans-serif" ></h2>
-        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-    </div>
-    <div class="card-body">
-        <ul class="list-group">
-            <li class="list-group-item">ID: </li>
-            <li class="list-group-item">Email: <a href="mailto:"></a></li>
-            <li class="list-group-item">School: </li>
+            <li class="list-group-item">ID: kjhn</li>
+            <li class="list-group-item">Email: <a href="mailto:jnjk">jnjk</a></li>
+            <li class="list-group-item">School: kjhnjk</li>
         </ul>
     </div>
 </div>
